examples/core/src/main/java/org/jbehave/examples/core/stories/failing/given_non_successful.story
Scenario: A scenario that depends on a non successful story

GivenStories: org/jbehave/examples/core/stories/failing/non_successful.story

Given the traders:
|name |rank    |
|Larry|Stooge 3|
|Moe  |Stooge 1|
|Curly|Stooge 2|
